# mp3fs

./: configure.ac
src/: Makefile.am  transcode.cc
src/codecs/: Makefile.am  coders.cc  coders.h  mp3_encoder.cc  mp3_encoder.h
